tests/compiler/unknownTypeErrors/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.3/tests/cases/compiler/unknownTypeErrors.ts`, Apache-2.0 License

var foo: Unknown = 0;
//~^ ERROR: Cannot find name 'Unknown'.